objects/sf_devops__Branch__c.object
<CustomObject>
    <description>Represents one branch of a repository.</description>
    <fields>
        <fullName>sf_devops__Ignore_Rules__c</fullName>
        <description>Stores Ignore Rules</description>
        <label>Ignore Rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_devops__Name__c</fullName>
        <description>The name of the branch.</description>
        <inlineHelpText>The name of the branch.</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Parent_Remote_Reference__c</fullName>
        <description>The remote reference on the source branch that our branch was created from.</description>
        <inlineHelpText>The remote reference on the source branch that our branch was created from.</inlineHelpText>
        <label>Parent Remote Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Remote_Reference_Date__c</fullName>
        <description>Stores the last time Remote_Reference__c has been updated in the Branch__c.</description>
        <label>Remote Reference Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf_devops__Remote_Reference__c</fullName>
        <description>The latest remote reference on our branch.</description>
        <inlineHelpText>The latest remote reference on our branch.</inlineHelpText>
        <label>Remote Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Repository__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The repository owner of this branch</description>
        <label>Repository</label>
        <referenceTo>sf_devops__Repository__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Branch</label>
    <nameField>
        <displayFormat>BR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>